--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,10 @@ pipenv==2025.0.3
 pluggy==1.6.0
 
 PyYAML==6.0.2
+pytest==8.3.0
+pytest-cov==4.1.0
+pytest-mock==3.10.0
+pytest-xdist==3.4.0
 requests==2.31.0
 s3transfer==0.13.0
 
