--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,4 +31,4 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests
-        run: pytest tests/
+        run: PYTHONPATH=. pytest tests/
