--- a/.github/workflows/terraform_deploy.yml
+++ b/.github/workflows/terraform_deploy.yml
@@ -42,10 +42,10 @@ jobs:
 
 
           zip_lambda "wf_trigger" "startworkflow.py" "start_workflow"
-          zip_lambda "lambda/OrderValidation" "order_validation.py" "order_validation"
-          zip_lambda "lambda/InvoiceGenerator" "InvoiceGenerator.py" "invoice_generator"
-          zip_lambda "lambda/ShippingSuggestion" "ShippingSuggestion.py" "shipping_suggestion"
-          zip_lambda "lambda/OrderStatusTracking" "OrderStatusTracking.py" "order_status_tracking"
+          zip_lambda "./OrderValidation" "order_validation.py" "order_validation"
+          zip_lambda "./InvoiceGenerator" "InvoiceGenerator.py" "invoice_generator"
+          zip_lambda "./ShippingSuggestion" "ShippingSuggestion.py" "shipping_suggestion"
+          zip_lambda "./OrderStatusTracking" "OrderStatusTracking.py" "order_status_tracking"
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
