--- a/.github/workflows/terraform_deploy.yml
+++ b/.github/workflows/terraform_deploy.yml
@@ -42,7 +42,7 @@ jobs:
 
 
           zip_lambda "wf_trigger" "startworkflow.py" "start_workflow"
-          zip_lambda "./OrderValidation" "order_validation.py" "order_validation"
+          zip_lambda "./order_validation" "order_validation.py" "order_validation"
           zip_lambda "./InvoiceGenerator" "InvoiceGenerator.py" "invoice_generator"
           zip_lambda "./ShippingSuggestion" "ShippingSuggestion.py" "shipping_suggestion"
           zip_lambda "./OrderStatusTracking" "OrderStatusTracking.py" "order_status_tracking"
