--- a/.github/workflows/terraform_deploy.yml
+++ b/.github/workflows/terraform_deploy.yml
@@ -66,7 +66,7 @@ jobs:
         working-directory: Infra
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve -var="${{ secrets.AWS_REGION }}" -var="environment=${{ secrets.ENVIRONMENT }}" -var="project_name=${{ secrets.PROJECT_NAME }}"
+        run: terraform apply -auto-approve -var="region=${{ secrets.AWS_REGION }}" -var="environment=${{ secrets.ENVIRONMENT }}" -var="project_name=${{ secrets.PROJECT_NAME }}"
         working-directory: Infra
 
       - name: Notify Deployment Success
