Added terraform destroy to the workflow Added terraform destroy to the workflow for cleanup after plan and apply steps.

--- a/.github/workflows/terraform_deploy.yml
+++ b/.github/workflows/terraform_deploy.yml
@@ -65,6 +65,11 @@ jobs:
         run: terraform plan
         working-directory: Infra
 
+      - name: Terraform Destroy (cleanup)
+        run: terraform destroy -auto-approve
+        working-directory: Infra
+        continue-on-error: true
+
       - name: Terraform Apply
         run: terraform apply -auto-approve
         working-directory: Infra
