Added terraform destroy to the workflow Added terraform destroy to the workflow for cleanup after plan and apply steps.

--- a/.github/workflows/terraform_deploy.yml
+++ b/.github/workflows/terraform_deploy.yml
@@ -75,7 +75,7 @@ jobs:
         working-directory: Infra
 
       - name: Notify Deployment Success
-        run: echo "Deployment was successful!"
+        run: echo "Deployment was successful!  ✅"
 
   test:
     needs: deploy
